--- a/src/index.css
+++ b/src/index.css
@@ -63,13 +63,14 @@ body::-webkit-scrollbar-thumb {
     z-index: 1000;
 }
 .skillsDiv{
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
     gap: 10px;
     font-size: larger;
     font: bold;
     color: #8892b0;
 }
+
 .skillsDiv >li{
     display: flex;
     align-items: center;
@@ -104,9 +105,23 @@ body::-webkit-scrollbar-thumb {
     max-height: calc(65vh - 80px) !important;
 }
 
+/* media querry */
+
+@media (max-width: 768px) {
+    .skillsDiv{
+        grid-template-columns: 1fr;
+    }
+}
+
+
+/* media querry landscape */
+
 @media only screen and (max-height: 575.98px) and (orientation: landscape) {
     .image-gallery-content .image-gallery-slide .image-gallery-image {
         max-height: 90vh !important;
+    }
+    .skillsDiv{
+        padding-bottom: 7rem;
     }
 }
 
